working box shadow, will fix alignment of text later

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -50,24 +50,20 @@
 
 article.tweet {
   width: 100%;
+  opacity: 0.75;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items:center;
   border: 2px solid black;
-  margin-bottom: 5px
+  margin-bottom: 5px;
 }
 
 article.tweet:hover {
-  box-shadow: 20px 20px #4056A1;
+  opacity: 1;
+  box-shadow: 10px 10px #192446;
 }
 
-article.tweet:hover .handle {
-  opacity:0.75;
-}
-article.tweet:hover .icon{
-  opacity: 0.75;
-}
 
 article.tweet header {
   display:flex;
